# projektemacher-base

./: .eslintrc.yml  .gitignore  .gotml.json  .stylelintrc-postbuild.json  .stylelintrc-postbuild.yaml  .stylelintrc.json  .stylelintrc.yaml  .syntax.json  404.html  README.md  eslint.config.mjs  index.html  index.xml  package.hugo.json  package.json  pagefind-index.yaml  purgecss.config.js  pyproject.toml  requirements.txt  sitemap.xml  theme.toml
.github/: dependabot.yml
assets/: llms.go.txt
categories/: index.html  index.xml
config/: index.html  index.xml
exampleSite/: .gitignore  config.toml  hugo.toml
flags/: genScss.mjs  package-lock.json  package.json  pnpm-workspace.yaml
fonts/: .gitignore  README.md  package-lock.json  package.json
git/: index.html
i18n/: 3d.de.toml  3d.en.toml  content.de.toml  content.en.toml  cookie.de.toml  cookie.en.toml  de.toml  doi.de.toml  doi.en.toml  en.toml  i18n.de.toml  i18n.en.toml  iiif.de.toml  iiif.en.toml  print.de.toml  print.en.toml  tags.de.toml  tags.en.toml  theme.de.toml  theme.en.toml
layouts/: 404.html  robots.txt
meta/: index.html  index.xml
patches/: mirador+3.1.1.patch.old  mirador+3.3.0.patch
posts/: index.html  index.xml
privacy/: index.html
scripts/: 3d-models.sh  archive.py  bbox.py  check-js-browser-errors.js  check-js-browser-errors.mjs  cleanup-externals.sh  cleanup.sh  enhance_image.py  favicon.sh  find-python3.sh  flags.sh  fonts.sh  generate-qr-codes.py  iiif.sh  image-stubs.sh  indexer.py  install-jxlpy-mac.sh  json-lint.sh  jxl-jpg-stubs.sh  jxlpy-osx.sh  merge-toml.py  mirador-3029.sh  mp42theora.sh  pdf.py  pdfjs.sh  post-calendar.py  preview.py  preview.sh  (+4 more)
scripts/PyHugo/: .gitignore  Dockerfile  Posts.py  README.md  Util.py  __init__.py  build.sh  content.py  go.mod  hugolib.go  pyproject.toml  requirements.txt  setup.py  test-pyhugo.py  test.py
scripts/PyHugo/PyHugolib/: Config.py  PyHugolib.py  Site.py  __init__.py
scripts/PyHugo/go/: go.mod  go.sum  hugolib.go
(+395 files in other folders)
