[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "PyHugolib"
version = "0.0.1"
authors = [
  { name = "Christian Mahnke", email = "cmahnke@gmail.com" },
]
description = "Python Wrapper for Hugo(lib)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cmahnke/projektemacher-base"
"Bug Tracker" = "https://github.com/cmahnke/projektemacher-base/issues"
